<resources>
    <string name="app_name">AttendenceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batch_list">Batch List</string>
    <string name="batch_or_subject_name">Batch Or Subject Name</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="class_time">Class Time</string>
    <string name="batch_name">Batch Name</string>
    <string name="create">Create</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_class_details">Delete Class Details</string>
    <string name="update_class_details">Update Class Details</string>
    <string name="add_student">Add Student</string>
    <string name="student_name">Student Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
</resources>